objects/Event_Team_Members_Delegates__c.object
<CustomObject>
    <fields>
        <fullName>DelegateName__c</fullName>
        <description>RN - Friendly name for the junction object</description>
        <formula>Delegate__r.Contact__r.FirstName + &apos; &apos; +  Delegate__r.Contact__r.LastName</formula>
        <label>Delegate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <label>Delegate</label>
        <referenceTo>Delegate__c</referenceTo>
        <relationshipName>Team_Members_Delegates_Delegate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Team_Member__c</fullName>
        <label>Host</label>
        <referenceTo>Event_Team_Member__c</referenceTo>
        <relationshipName>Team_Members_Delegates_Team_Member</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <formula>Event_Team_Member__c ==  Delegate__r.Host__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Host Delegate</label>
    <nameField>
        <displayFormat>HD-{000000}</displayFormat>
        <label>Host Delegates No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Host Delegates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>